<resources>
    <string name="app_name">TimeSpace</string>

    <!-- navigation -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu label -->
    <string name="menu_calendar">My Calendar</string>
    <string name="menu_weekCalendar">Weekly Calendar</string>
    <string name="menu_groups">Groups</string>
    <string name="menu_friends">Friends</string>
    <string name="menu_publicEvents">Public Events</string>
    <string name="menu_groupEvents">Group Events</string>
    <string name="menu_events">Event Request</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_profile">Profile</string>

    <!-- activity title -->
    <string name="title_weekly_calendar">Weekly Calendar</string>
    <string name="title_profile">Profile</string>
    <string name="title_requests">Requests</string>
    <string name="title_search_friends">Search Friends</string>
    <string name="title_friend_message">Friend Request</string>

    <!--speech-->
    <string name="speech_not_available">Speech recognition is not available on this device. Do you want to install Google app to have speech recognition?</string>
    <string name="permission_required">You need to grant the permission to use the microphone</string>
    <string name="enable_google_voice_typing">Please enable Google Voice Typing to use speech recognition!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="repeat">Repeat please</string>
</resources>
